--- a/_config.yml
+++ b/_config.yml
@@ -25,27 +25,27 @@ ganalytics: UA-113961478-1
 # Authors
 authors:
   sal:
-    name: Sal
-    display_name: Sal
+    name: Eason
+    display_name: 暂停空间
     avatar: 'assets/images/sal.png'
     email: wowthemesnet@gmail.com
     web: https://www.wowthemes.net/category/jekyll-themes/
-    twitter: https://twitter.com/wowthemesnet
-    description: "Author of Affiliates, a template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
+    twitter: https://twitter.com/zantingkongjian
+    description: "暂停空间"
   john:
-    name: John
-    display_name: John
+    name: Eason
+    display_name: 暂停空间
     avatar: 'assets/images/john.png'
     email: wowthemesnet@gmail.com
     web: https://www.wowthemes.net/category/jekyll-themes/
     twitter: https://twitter.com/wowthemesnet
-    description: "This is the author box. Write a short description of the author here. You are currently previewing Affiliates theme demo, a Jekyll template compatible with Github pages."
+    description: "暂停空间"
 
 # Social
 social:
-  instagram: https://www.instagram.com/bootstrapstarter/
-  facebook: https://www.facebook.com/bootstrapstartercom-346329609045284
-  twitter: https://twitter.com/bstartercom
+  instagram: 
+  facebook: 
+  twitter: https://twitter.com/zantingkongjian
 
 # Plugins
 plugins: 
